--- a/src/FlexTemplate/Views/Home/Components/ThisPlaceHeader/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisPlaceHeader/Default.cshtml
@@ -6,7 +6,7 @@
         <input type="file">
         <div class="dz-default dz-message"><span>Змінити головну фотографію закладу</span></div>
     </div>
-    <div class="hero hero-detail" style="background-image: url(../../@Model.HeadPhoto);">
+    <div class="hero hero-detail" style="background-image: url(../../Resources/Places/@Model.Place.Id/banner.jpg);">
         <div class="container">
             <div class="hero-detail-inner">
                 <div id="detail-content-sticky-nav-00" class="hero-detail-bottom">
