--- a/src/FlexTemplate/Views/Home/NewPlace.cshtml
+++ b/src/FlexTemplate/Views/Home/NewPlace.cshtml
@@ -24,7 +24,7 @@
                     </div>
                 </div>-->
                 <div class="submite-list-wrapper">
-                    <form method="post" asp-controller="Home" asp-action="NewPlace" enctype="multipart/form-data"  id="new-place-form">
+                    <form method="post" asp-controller="Home" asp-action="NewPlace" enctype="multipart/form-data" id="new-place-form">
                         <!--Main info-->
                         <div class="row">
                             <div class="col-md-8">
@@ -39,7 +39,7 @@
                                 <div class="col-xs-12 col-sm-12">
                                     <div class="form-group form-group-lg">
                                         <label>Назва ресторану:</label>
-                                        <input type="text" class="form-control required" name="Name"/>
+                                        <input type="text" class="form-control required" name="Name" />
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-12">
@@ -57,7 +57,7 @@
                                 {
                                     <div class="col-xs-12 col-sm-4">
                                         <div class="checkbox-block font-icon-checkbox">
-                                            <input id="filter_cuisine-@category.Id" type="checkbox" class="checkbox" name="Categories[]" value="@category.Id"/>
+                                            <input id="filter_cuisine-@category.Id" type="checkbox" class="checkbox" name="Categories[]" value="@category.Id" />
                                             <label for="filter_cuisine-@category.Id">@category.Name</label>
                                         </div>
                                     </div>
@@ -355,7 +355,7 @@
                                     <div class="image-upload">
                                         <div class="dropzone food-menu-image">
                                             <input name="file" type="file">
-                                            <input class="file_descriptor" type="hidden" name="Menus[0].Products[0].Guid" value="@Guid.NewGuid()"/>
+                                            <input class="file_descriptor" type="hidden" name="Menus[0].Products[0].Guid" value="@Guid.NewGuid()" />
                                             <div class="dz-default dz-message"><span>Click or Drop<br />Images Here<br /><small class="font-italic text-muted font400 mt-5 block">2MB max file</small></span></div>
                                         </div>
                                     </div>
@@ -424,19 +424,30 @@
                                 </div>
                             </div>
                         </div>
+                        @{ var uid = Guid.NewGuid().ToString();}
                         <div class="submite-list-box">
+                            <div id="head-update" class="dropzone">
+                                <input type="file">
+                                <input class="file_descriptor" type="hidden" value="@uid"/>
+                                <div class="dz-default dz-message"><span>Головна фотографія</span></div>
+                            </div>
+                            <div id="banner-update" class="dropzone">
+                                <input type="file">
+                                <input class="file_descriptor" type="hidden" value="@uid" />
+                                <div class="dz-default dz-message"><span>Баннер</span></div>
+                            </div>
                             <div id="new-place" class="dropzone">
                                 <input name="files" type="file" multiple>
-                                <input class="file_descriptor" type="hidden" name="uid" value="@Guid.NewGuid().ToString()" />
-                                <div class="dz-default dz-message"><span>Натисніть або перетяніть сюди зображення</span></div>
+                                <input class="file_descriptor" type="hidden" name="uid" value="@uid" />
+                                <div class="dz-default dz-message"><span>Фотографії галереї</span></div>
                             </div>
                         </div>
                         <!--End Фотографії-->
                         <!--Submit-->
                         <!--<div class="checkbox-block font-icon-checkbox">
-                            <input id="term_accept-1" name="TermAccept" type="checkbox" class="required checkbox" />
-                            <label class="" for="term_accept-1">Am terminated it excellence invitation projection as. She graceful shy believed distance use nay. Lively is people so basket ladies window expect. <a href="#" class="font700">Terms &amp; Conditions</a></label>
-                        </div>-->
+        <input id="term_accept-1" name="TermAccept" type="checkbox" class="required checkbox" />
+        <label class="" for="term_accept-1">Am terminated it excellence invitation projection as. She graceful shy believed distance use nay. Lively is people so basket ladies window expect. <a href="#" class="font700">Terms &amp; Conditions</a></label>
+        </div>-->
                         <input type="submit" class="btn btn-primary mt-15" value="Відправити" />
                         <!--End Submit-->
                     </form>
