[FIX] Правки заказчика

--- a/src/FlexTemplate/Views/Home/Components/ThisPlaceHeader/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisPlaceHeader/Default.cshtml
@@ -2,10 +2,10 @@
 <!-- start hero-header -->
 <div class="c-this-place-header">
     <input class="file_descriptor" type="hidden" value="@Model.Place.Id" />
-    <div id="head-update" class="dropzone">
+    <!--<div id="head-update" class="dropzone">
         <input type="file">
         <div class="dz-default dz-message"><span>Змінити головну фотографію закладу</span></div>
-    </div>
+    </div>-->
     <div class="hero hero-detail" style="background-image: url(../../@Model.HeadPhoto);">
         <div class="container">
             <div class="hero-detail-inner">
