--- a/src/FlexTemplate/Views/Home/Place.cshtml
+++ b/src/FlexTemplate/Views/Home/Place.cshtml
@@ -62,7 +62,7 @@
                     @await Component.InvokeAsync("ThisPlaceOverview", new {item = Model.Place})
                     @await Component.InvokeAsync("ThisPlaceMenu", new { item = Model.Place })
                     @await Component.InvokeAsync("ThisPlaceReviews", new { item = Model.Place })
-                    @await Component.InvokeAsync("ThisPlacePhoto", new { item = Model.Place })
+                    @*@await Component.InvokeAsync("ThisPlacePhoto", new { item = Model.Place })*@
                     @await Component.InvokeAsync("ThisPlaceLocation", new { item = Model.Place })
 
                 </div>
