--- a/src/FlexTemplate/Views/Home/NewPlace.cshtml
+++ b/src/FlexTemplate/Views/Home/NewPlace.cshtml
@@ -49,6 +49,88 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <div class="row gap-20 mt-15">
+                                <div class="col-xs-12 col-sm-12 col-md-12">
+                                    <label class="block">Фичи</label>
+                                </div>
+                               
+                                    <div class="col-xs-12 col-sm-4">
+                                        <div class="checkbox-block font-icon-checkbox">
+                                            <input id="filter_cuisine-Id" type="checkbox" class="checkbox" name="Features[]" value="id" />
+                                            <label for="filter_cuisine-Id">Фича 1</label>
+                                        </div>
+                                    </div>
+                                <div class="col-xs-12 col-sm-4">
+                                    <div class="checkbox-block font-icon-checkbox">
+                                        <input id="filter_cuisine-Id" type="checkbox" class="checkbox" name="Features[]" value="id" />
+                                        <label for="filter_cuisine-Id">Фича 1</label>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-4">
+                                    <div class="checkbox-block font-icon-checkbox">
+                                        <input id="filter_cuisine-Id" type="checkbox" class="checkbox" name="Features[]" value="id" />
+                                        <label for="filter_cuisine-Id">Фича 1</label>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-4">
+                                    <div class="checkbox-block font-icon-checkbox">
+                                        <input id="filter_cuisine-Id" type="checkbox" class="checkbox" name="Features[]" value="id" />
+                                        <label for="filter_cuisine-Id">Фича 1</label>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-4">
+                                    <div class="checkbox-block font-icon-checkbox">
+                                        <input id="filter_cuisine-Id" type="checkbox" class="checkbox" name="Features[]" value="id" />
+                                        <label for="filter_cuisine-Id">Фича 1</label>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-4">
+                                    <div class="checkbox-block font-icon-checkbox">
+                                        <input id="filter_cuisine-Id" type="checkbox" class="checkbox" name="Features[]" value="id" />
+                                        <label for="filter_cuisine-Id">Фича 1</label>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-4">
+                                    <div class="checkbox-block font-icon-checkbox">
+                                        <input id="filter_cuisine-Id" type="checkbox" class="checkbox" name="Features[]" value="id" />
+                                        <label for="filter_cuisine-Id">Фича 1</label>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-4">
+                                    <div class="checkbox-block font-icon-checkbox">
+                                        <input id="filter_cuisine-Id" type="checkbox" class="checkbox" name="Features[]" value="id" />
+                                        <label for="filter_cuisine-Id">Фича 1</label>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-4">
+                                    <div class="checkbox-block font-icon-checkbox">
+                                        <input id="filter_cuisine-Id" type="checkbox" class="checkbox" name="Features[]" value="id" />
+                                        <label for="filter_cuisine-Id">Фича 1</label>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-4">
+                                    <div class="checkbox-block font-icon-checkbox">
+                                        <input id="filter_cuisine-Id" type="checkbox" class="checkbox" name="Features[]" value="id" />
+                                        <label for="filter_cuisine-Id">Фича 1</label>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-4">
+                                    <div class="checkbox-block font-icon-checkbox">
+                                        <input id="filter_cuisine-Id" type="checkbox" class="checkbox" name="Features[]" value="id" />
+                                        <label for="filter_cuisine-Id">Фича 1</label>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-4">
+                                    <div class="checkbox-block font-icon-checkbox">
+                                        <input id="filter_cuisine-Id" type="checkbox" class="checkbox" name="Features[]" value="id" />
+                                        <label for="filter_cuisine-Id">Фича 1</label>
+                                    </div>
+                                </div>
+
+                               
+                            </div>
+
                             <div class="row gap-20 mt-15">
                                 <div class="col-xs-12 col-sm-12 col-md-12">
                                     <label class="block">Категорії</label>
@@ -123,7 +205,7 @@
 
                                                     <div class="input-group from mb-15">
                                                         <span class="input-group-addon">from</span>
-                                                        <input class="oh-timepicker form-control" type="text" name="MondayFrom">
+                                                        <input class="oh-timepicker form-control" type="text" name="Opening">
                                                     </div>
 
                                                 </div>
@@ -132,7 +214,7 @@
 
                                                     <div class="input-group to mb-15">
                                                         <span class="input-group-addon">to</span>
-                                                        <input class="oh-timepicker form-control" type="text" name="MondayTo">
+                                                        <input class="oh-timepicker form-control" type="text" name="Closing">
                                                     </div>
 
                                                 </div>
@@ -151,7 +233,7 @@
 
                                                     <div class="input-group from mb-15">
                                                         <span class="input-group-addon">from</span>
-                                                        <input class="oh-timepicker form-control" type="text" name="TuesdayFrom">
+                                                        <input class="oh-timepicker form-control" type="text" name="Opening">
                                                     </div>
 
                                                 </div>
@@ -160,7 +242,7 @@
 
                                                     <div class="input-group to mb-15">
                                                         <span class="input-group-addon">to</span>
-                                                        <input class="oh-timepicker form-control" type="text" name="TuesdayTo">
+                                                        <input class="oh-timepicker form-control" type="text" name="Closing">
                                                     </div>
 
                                                 </div>
