--- a/src/FlexTemplate/Views/Home/Components/ThisPlacePhoto/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisPlacePhoto/Default.cshtml
@@ -10,9 +10,9 @@
     
 </div>
 
-<form method="post" asp-action="Upload" asp-controller="Upload" enctype="multipart/form-data">
+<!--<form method="post" asp-action="Upload" asp-controller="Upload" enctype="multipart/form-data">
     <div id="file-submit" class="dropzone">
         <input type="file">
         <div class="dz-default dz-message"><span>Завантажити ще..</span></div>
     </div>
-</form>
+</form>-->
