--- a/src/FlexTemplate/Views/Home/NewPlace.cshtml
+++ b/src/FlexTemplate/Views/Home/NewPlace.cshtml
@@ -52,79 +52,67 @@
 
                             <div class="row gap-20 mt-15">
                                 <div class="col-xs-12 col-sm-12 col-md-12">
-                                    <label class="block">Фичи</label>
+                                    <label class="block">Особливості</label>
                                 </div>
                                
                                     <div class="col-xs-12 col-sm-4">
                                         <div class="checkbox-block font-icon-checkbox">
-                                            <input id="filter_cuisine-Id" type="checkbox" class="checkbox" name="Features[]" value="id" />
-                                            <label for="filter_cuisine-Id">Фича 1</label>
+                                            <input type="text" name="Features[]" />
                                         </div>
                                     </div>
                                 <div class="col-xs-12 col-sm-4">
                                     <div class="checkbox-block font-icon-checkbox">
-                                        <input id="filter_cuisine-Id" type="checkbox" class="checkbox" name="Features[]" value="id" />
-                                        <label for="filter_cuisine-Id">Фича 1</label>
+                                        <input type="text" name="Features[]" />
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-4">
                                     <div class="checkbox-block font-icon-checkbox">
-                                        <input id="filter_cuisine-Id" type="checkbox" class="checkbox" name="Features[]" value="id" />
-                                        <label for="filter_cuisine-Id">Фича 1</label>
+                                        <input type="text" name="Features[]" />
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-4">
                                     <div class="checkbox-block font-icon-checkbox">
-                                        <input id="filter_cuisine-Id" type="checkbox" class="checkbox" name="Features[]" value="id" />
-                                        <label for="filter_cuisine-Id">Фича 1</label>
+                                        <input type="text" name="Features[]" />
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-4">
                                     <div class="checkbox-block font-icon-checkbox">
-                                        <input id="filter_cuisine-Id" type="checkbox" class="checkbox" name="Features[]" value="id" />
-                                        <label for="filter_cuisine-Id">Фича 1</label>
+                                        <input type="text" name="Features[]" />
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-4">
                                     <div class="checkbox-block font-icon-checkbox">
-                                        <input id="filter_cuisine-Id" type="checkbox" class="checkbox" name="Features[]" value="id" />
-                                        <label for="filter_cuisine-Id">Фича 1</label>
+                                        <input type="text" name="Features[]" />
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-4">
                                     <div class="checkbox-block font-icon-checkbox">
-                                        <input id="filter_cuisine-Id" type="checkbox" class="checkbox" name="Features[]" value="id" />
-                                        <label for="filter_cuisine-Id">Фича 1</label>
+                                        <input type="text" name="Features[]" />
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-4">
                                     <div class="checkbox-block font-icon-checkbox">
-                                        <input id="filter_cuisine-Id" type="checkbox" class="checkbox" name="Features[]" value="id" />
-                                        <label for="filter_cuisine-Id">Фича 1</label>
+                                        <input type="text" name="Features[]" />
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-4">
                                     <div class="checkbox-block font-icon-checkbox">
-                                        <input id="filter_cuisine-Id" type="checkbox" class="checkbox" name="Features[]" value="id" />
-                                        <label for="filter_cuisine-Id">Фича 1</label>
+                                        <input type="text" name="Features[]" />
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-4">
                                     <div class="checkbox-block font-icon-checkbox">
-                                        <input id="filter_cuisine-Id" type="checkbox" class="checkbox" name="Features[]" value="id" />
-                                        <label for="filter_cuisine-Id">Фича 1</label>
+                                        <input type="text" name="Features[]" />
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-4">
                                     <div class="checkbox-block font-icon-checkbox">
-                                        <input id="filter_cuisine-Id" type="checkbox" class="checkbox" name="Features[]" value="id" />
-                                        <label for="filter_cuisine-Id">Фича 1</label>
+                                        <input type="text" name="Features[]" />
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-4">
                                     <div class="checkbox-block font-icon-checkbox">
-                                        <input id="filter_cuisine-Id" type="checkbox" class="checkbox" name="Features[]" value="id" />
-                                        <label for="filter_cuisine-Id">Фича 1</label>
+                                        <input type="text" name="Features[]" />
                                     </div>
                                 </div>
 
