--- a/src/FlexTemplate/Views/Home/EditPlace.cshtml
+++ b/src/FlexTemplate/Views/Home/EditPlace.cshtml
@@ -52,6 +52,71 @@
                             </div>
                             <div class="row gap-20 mt-15">
                                 <div class="col-xs-12 col-sm-12 col-md-12">
+                                    <label class="block">Особливості (наприклад WiFi або Дитяча площадка):</label>
+                                </div>
+                                <div class="col-xs-12 col-sm-3">
+                                    <div class="form-group checkbox-block font-icon-checkbox">
+                                        <input class="form-control" type="text" name="Features[0][0]" />
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-3">
+                                    <div class="form-group checkbox-block font-icon-checkbox">
+                                        <input class="form-control" type="text" name="Features[0][1]" />
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-3">
+                                    <div class="form-group checkbox-block font-icon-checkbox">
+                                        <input class="form-control" type="text" name="Features[0][2]" />
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-3">
+                                    <div class="form-group checkbox-block font-icon-checkbox">
+                                        <input class="form-control" type="text" name="Features[0][3]" />
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-3">
+                                    <div class="form-group checkbox-block font-icon-checkbox">
+                                        <input class="form-control" type="text" name="Features[1][0]" />
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-3">
+                                    <div class="checkbox-block font-icon-checkbox">
+                                        <input class="form-control" type="text" name="Features[1][1]" />
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-3">
+                                    <div class="form-group checkbox-block font-icon-checkbox">
+                                        <input class="form-control" type="text" name="Features[1][2]" />
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-3">
+                                    <div class="form-group checkbox-block font-icon-checkbox">
+                                        <input class="form-control" type="text" name="Features[1][3]" />
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-3">
+                                    <div class="form-group checkbox-block font-icon-checkbox">
+                                        <input class="form-control" type="text" name="Features[2][0]" />
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-3">
+                                    <div class="form-group checkbox-block font-icon-checkbox">
+                                        <input class="form-control" type="text" name="Features[2][1]" />
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-3">
+                                    <div class="form-group checkbox-block font-icon-checkbox">
+                                        <input class="form-control" type="text" name="Features[2][2]" />
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-3">
+                                    <div class="form-group checkbox-block font-icon-checkbox">
+                                        <input class="form-control" type="text" name="Features[2][3]" />
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row gap-20 mt-15">
+                                <div class="col-xs-12 col-sm-12 col-md-12">
                                     <label class="block">Категорії</label>
                                 </div>
                                 @foreach (FlexTemplate.Entities.Category category in Model.AllCategories)
@@ -343,7 +408,7 @@
 
                                     <div class="form-group form-group-lg">
 
-                                        <input type="text" name="Menus[0].Name" class="form-control" value=""/>
+                                        <input type="text" name="Menus[0].Name" class="form-control" value="" />
 
                                     </div>
                                     <div class="food-menu-form-box clearfix">
@@ -356,7 +421,7 @@
                                         <div class="image-upload">
                                             <div class='dropzone food-menu-image'>
                                                 <input name="file" type="file">
-                                                <input class="file_descriptor" type="hidden" name="Menus[0].Products[0].Guid" value="@Guid.NewGuid()"/>
+                                                <input class="file_descriptor" type="hidden" name="Menus[0].Products[0].Guid" value="@Guid.NewGuid()" />
                                                 <div class="dz-default dz-message"><span>Click or Drop<br />Images Here<br /><small class="font-italic text-muted font400 mt-5 block">2MB max file</small></span></div>
                                             </div>
                                         </div>
@@ -369,7 +434,7 @@
 
                                                     <div class="form-group">
                                                         <label>Title</label>
-                                                        <input type="text" name="Menus[0].Products[0].Name" class="form-control" value=""/>
+                                                        <input type="text" name="Menus[0].Products[0].Name" class="form-control" value="" />
                                                     </div>
 
                                                 </div>
@@ -390,7 +455,7 @@
 
                                                     <div class="form-group">
                                                         <label>Short Description</label>
-                                                        <input type="text" name="Menus[0].Products[0].Description" class="form-control" value=""/>
+                                                        <input type="text" name="Menus[0].Products[0].Description" class="form-control" value="" />
                                                     </div>
 
                                                 </div>
@@ -407,7 +472,7 @@
 
                                     <div class="form-group form-group-lg">
                                         <input type="hidden" name="Menus[@i].Id" value="@Model.Menus[i].Id">
-                                        <input type="text" name="Menus[@i].Name" class="form-control" value="@Model.Menus[i].Name"/>
+                                        <input type="text" name="Menus[@i].Name" class="form-control" value="@Model.Menus[i].Name" />
 
                                     </div>
                                     for (var j = 0; j < Model.Menus[i].Products.Count; j++)
@@ -423,7 +488,7 @@
                                                 <div class='@(Model.Menus[i].Products[j].HasPhoto ? "dropzone food-menu-image food-menu-image-exsisting" : "dropzone food-menu-image")'>
                                                     <input name="file" type="file">
                                                     <input class="file_descriptor" type="hidden" name="Menus[@i].Products[@j].Id" value="@Model.Menus[i].Products[j].Id" />
-                                                    <input class="file_descriptor" type="hidden" name="Menus[@i].Products[@j].Guid" value="@Model.Menus[i].Products[j].Id"/>
+                                                    <input class="file_descriptor" type="hidden" name="Menus[@i].Products[@j].Guid" value="@Model.Menus[i].Products[j].Id" />
                                                     <div class="dz-default dz-message"><span>Click or Drop<br />Images Here<br /><small class="font-italic text-muted font400 mt-5 block">2MB max file</small></span></div>
                                                 </div>
                                             </div>
@@ -436,7 +501,7 @@
 
                                                         <div class="form-group">
                                                             <label>Title</label>
-                                                            <input type="text" name="Menus[@i].Products[@j].Name" class="form-control" value="@Model.Menus[i].Products[j].Name"/>
+                                                            <input type="text" name="Menus[@i].Products[@j].Name" class="form-control" value="@Model.Menus[i].Products[j].Name" />
                                                         </div>
 
                                                     </div>
@@ -457,7 +522,7 @@
 
                                                         <div class="form-group">
                                                             <label>Short Description</label>
-                                                            <input type="text" name="Menus[@i].Products[@j].Description" class="form-control" value="@Model.Menus[i].Products[j].Description"/>
+                                                            <input type="text" name="Menus[@i].Products[@j].Description" class="form-control" value="@Model.Menus[i].Products[j].Description" />
                                                         </div>
 
                                                     </div>
@@ -506,7 +571,7 @@
                             </div>
                             <div id="edit-place" class="dropzone">
                                 <input name="files" type="file" multiple>
-                                <input class="file_descriptor" type="hidden" name="uid" value="@Model.Id"/>
+                                <input class="file_descriptor" type="hidden" name="uid" value="@Model.Id" />
                                 <div class="dz-default dz-message"><span>Галерея</span></div>
                             </div>
                         </div>
