--- a/src/FlexTemplate/Views/Home/NewPlace.cshtml
+++ b/src/FlexTemplate/Views/Home/NewPlace.cshtml
@@ -52,71 +52,68 @@
 
                             <div class="row gap-20 mt-15">
                                 <div class="col-xs-12 col-sm-12 col-md-12">
-                                    <label class="block">Особливості</label>
+                                    <label class="block">Особливості (наприклад WiFi або Дитяча площадка):</label>
                                 </div>
-                               
-                                    <div class="col-xs-12 col-sm-4">
-                                        <div class="checkbox-block font-icon-checkbox">
-                                            <input type="text" name="Features[]" />
-                                        </div>
+                                <div class="col-xs-12 col-sm-3">
+                                    <div class="form-group checkbox-block font-icon-checkbox">
+                                        <input class="form-control" type="text" name="Features[0][0]" />
                                     </div>
-                                <div class="col-xs-12 col-sm-4">
+                                </div>
+                                <div class="col-xs-12 col-sm-3">
+                                    <div class="form-group checkbox-block font-icon-checkbox">
+                                        <input class="form-control" type="text" name="Features[0][1]" />
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-3">
+                                    <div class="form-group checkbox-block font-icon-checkbox">
+                                        <input class="form-control" type="text" name="Features[0][2]" />
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-3">
+                                    <div class="form-group checkbox-block font-icon-checkbox">
+                                        <input class="form-control" type="text" name="Features[0][3]" />
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-3">
+                                    <div class="form-group checkbox-block font-icon-checkbox">
+                                        <input class="form-control" type="text" name="Features[1][0]" />
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-3">
                                     <div class="checkbox-block font-icon-checkbox">
-                                        <input type="text" name="Features[]" />
+                                        <input class="form-control" type="text" name="Features[1][1]" />
                                     </div>
                                 </div>
-                                <div class="col-xs-12 col-sm-4">
-                                    <div class="checkbox-block font-icon-checkbox">
-                                        <input type="text" name="Features[]" />
+                                <div class="col-xs-12 col-sm-3">
+                                    <div class="form-group checkbox-block font-icon-checkbox">
+                                        <input class="form-control" type="text" name="Features[1][2]" />
                                     </div>
                                 </div>
-                                <div class="col-xs-12 col-sm-4">
-                                    <div class="checkbox-block font-icon-checkbox">
-                                        <input type="text" name="Features[]" />
+                                <div class="col-xs-12 col-sm-3">
+                                    <div class="form-group checkbox-block font-icon-checkbox">
+                                        <input class="form-control" type="text" name="Features[1][3]" />
                                     </div>
                                 </div>
-                                <div class="col-xs-12 col-sm-4">
-                                    <div class="checkbox-block font-icon-checkbox">
-                                        <input type="text" name="Features[]" />
+                                <div class="col-xs-12 col-sm-3">
+                                    <div class="form-group checkbox-block font-icon-checkbox">
+                                        <input class="form-control" type="text" name="Features[2][0]" />
                                     </div>
                                 </div>
-                                <div class="col-xs-12 col-sm-4">
-                                    <div class="checkbox-block font-icon-checkbox">
-                                        <input type="text" name="Features[]" />
+                                <div class="col-xs-12 col-sm-3">
+                                    <div class="form-group checkbox-block font-icon-checkbox">
+                                        <input class="form-control" type="text" name="Features[2][1]" />
                                     </div>
                                 </div>
-                                <div class="col-xs-12 col-sm-4">
-                                    <div class="checkbox-block font-icon-checkbox">
-                                        <input type="text" name="Features[]" />
+                                <div class="col-xs-12 col-sm-3">
+                                    <div class="form-group checkbox-block font-icon-checkbox">
+                                        <input class="form-control" type="text" name="Features[2][2]" />
                                     </div>
                                 </div>
-                                <div class="col-xs-12 col-sm-4">
-                                    <div class="checkbox-block font-icon-checkbox">
-                                        <input type="text" name="Features[]" />
+                                <div class="col-xs-12 col-sm-3">
+                                    <div class="form-group checkbox-block font-icon-checkbox">
+                                        <input class="form-control" type="text" name="Features[2][3]" />
                                     </div>
                                 </div>
-                                <div class="col-xs-12 col-sm-4">
-                                    <div class="checkbox-block font-icon-checkbox">
-                                        <input type="text" name="Features[]" />
-                                    </div>
-                                </div>
-                                <div class="col-xs-12 col-sm-4">
-                                    <div class="checkbox-block font-icon-checkbox">
-                                        <input type="text" name="Features[]" />
-                                    </div>
-                                </div>
-                                <div class="col-xs-12 col-sm-4">
-                                    <div class="checkbox-block font-icon-checkbox">
-                                        <input type="text" name="Features[]" />
-                                    </div>
-                                </div>
-                                <div class="col-xs-12 col-sm-4">
-                                    <div class="checkbox-block font-icon-checkbox">
-                                        <input type="text" name="Features[]" />
-                                    </div>
-                                </div>
-
-                               
                             </div>
 
                             <div class="row gap-20 mt-15">
