--- a/src/FlexTemplate/Views/Home/EditPlace.cshtml
+++ b/src/FlexTemplate/Views/Home/EditPlace.cshtml
@@ -56,62 +56,62 @@
                                 </div>
                                 <div class="col-xs-12 col-sm-3">
                                     <div class="form-group checkbox-block font-icon-checkbox">
-                                        <input class="form-control" type="text" name="Features[0][0]" />
+                                        <input class="form-control" type="text" name="Features[0][0]" value="@(Model.Features.Length > 0 && Model.Features[0].Length > 0 ?  Model.Features[0][0] : string.Empty)"/>
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-3">
                                     <div class="form-group checkbox-block font-icon-checkbox">
-                                        <input class="form-control" type="text" name="Features[0][1]" />
+                                        <input class="form-control" type="text" name="Features[0][1]" value="@(Model.Features.Length > 0 && Model.Features[0].Length > 1 ?  Model.Features[0][1] : string.Empty)"/>
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-3">
                                     <div class="form-group checkbox-block font-icon-checkbox">
-                                        <input class="form-control" type="text" name="Features[0][2]" />
+                                        <input class="form-control" type="text" name="Features[0][2]" value="@(Model.Features.Length > 0 && Model.Features[0].Length > 2 ?  Model.Features[0][2] : string.Empty)"/>
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-3">
                                     <div class="form-group checkbox-block font-icon-checkbox">
-                                        <input class="form-control" type="text" name="Features[0][3]" />
+                                        <input class="form-control" type="text" name="Features[0][3]" value="@(Model.Features.Length > 0 && Model.Features[0].Length > 3 ?  Model.Features[0][3] : string.Empty)"/>
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-3">
                                     <div class="form-group checkbox-block font-icon-checkbox">
-                                        <input class="form-control" type="text" name="Features[1][0]" />
+                                        <input class="form-control" type="text" name="Features[1][0]" value="@(Model.Features.Length > 1 && Model.Features[1].Length > 0 ?  Model.Features[1][0] : string.Empty)"/>
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-3">
                                     <div class="checkbox-block font-icon-checkbox">
-                                        <input class="form-control" type="text" name="Features[1][1]" />
+                                        <input class="form-control" type="text" name="Features[1][1]" value="@(Model.Features.Length > 1 && Model.Features[1].Length > 1 ?  Model.Features[1][1] : string.Empty)"/>
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-3">
                                     <div class="form-group checkbox-block font-icon-checkbox">
-                                        <input class="form-control" type="text" name="Features[1][2]" />
+                                        <input class="form-control" type="text" name="Features[1][2]" value="@(Model.Features.Length > 1 && Model.Features[1].Length > 2 ?  Model.Features[1][2] : string.Empty)"/>
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-3">
                                     <div class="form-group checkbox-block font-icon-checkbox">
-                                        <input class="form-control" type="text" name="Features[1][3]" />
+                                        <input class="form-control" type="text" name="Features[1][3]" value="@(Model.Features.Length > 1 && Model.Features[1].Length > 3 ?  Model.Features[1][3] : string.Empty)"/>
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-3">
                                     <div class="form-group checkbox-block font-icon-checkbox">
-                                        <input class="form-control" type="text" name="Features[2][0]" />
+                                        <input class="form-control" type="text" name="Features[2][0]" value="@(Model.Features.Length > 2 && Model.Features[2].Length > 0 ?  Model.Features[2][0] : string.Empty)"/>
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-3">
                                     <div class="form-group checkbox-block font-icon-checkbox">
-                                        <input class="form-control" type="text" name="Features[2][1]" />
+                                        <input class="form-control" type="text" name="Features[2][1]" value="@(Model.Features.Length > 2 && Model.Features[2].Length > 1 ?  Model.Features[2][1] : string.Empty)"/>
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-3">
                                     <div class="form-group checkbox-block font-icon-checkbox">
-                                        <input class="form-control" type="text" name="Features[2][2]" />
+                                        <input class="form-control" type="text" name="Features[2][2]" value="@(Model.Features.Length > 2 && Model.Features[2].Length > 2 ?  Model.Features[2][2] : string.Empty)"/>
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-3">
                                     <div class="form-group checkbox-block font-icon-checkbox">
-                                        <input class="form-control" type="text" name="Features[2][3]" />
+                                        <input class="form-control" type="text" name="Features[2][3]" value="@(Model.Features.Length > 2 && Model.Features[2].Length > 3 ?  Model.Features[2][3] : string.Empty)"/>
                                     </div>
                                 </div>
                             </div>
