[ADD] Добавление Autocomplete для городов

--- a/src/FlexTemplate/Views/Home/EditPlace.cshtml
+++ b/src/FlexTemplate/Views/Home/EditPlace.cshtml
@@ -129,12 +129,13 @@
                                     </div>
                                 }
                             </div>
+                            
                             <h6 class="text-primary text-uppercase mt-15">Адреса &amp; Контакти</h6>
                             <div class="row gap-20">
                                 <div class="col-xs-12 col-sm-4">
-                                    <div class="form-group">
-                                        <label>Місто</label>
-                                        <input type="text" class="form-control required" name="city" value="@Model.City" />
+                                    <div class="form-group ui-widget">
+                                        <label for="city-tags">Місто</label>
+                                        <input type="text" class="form-control required" name="city" value="@Model.City" id="city-tags" />
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-4">
