--- a/src/FlexTemplate/Views/Home/NewPlace.cshtml
+++ b/src/FlexTemplate/Views/Home/NewPlace.cshtml
@@ -133,9 +133,9 @@
                             <h6 class="text-primary text-uppercase mt-15">Адреса &amp; Контакти</h6>
                             <div class="row gap-20">
                                 <div class="col-xs-12 col-sm-4">
-                                    <div class="form-group">
-                                        <label>Місто</label>
-                                        <input type="text" class="form-control required" name="city" />
+                                    <div class="form-group ui-widget">
+                                        <label for="city-tags">Місто</label>
+                                        <input type="text" class="form-control required" name="city" id="city-tags" />
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-4">
